<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.4</version>
        <relativePath/>
    </parent>

    <groupId>com.xavelo.filocitas</groupId>
    <artifactId>filocitas-api-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>filocitas-api-parent</name>

    <modules>
        <module>api</module>
        <module>application</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <docker.image.prefix>xavelo</docker.image.prefix>
        <docker.image.name>filocitas-api</docker.image.name>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <openapi.generator.version>7.5.0</openapi.generator.version>
        <swagger.annotations.version>2.2.21</swagger.annotations.version>
        <jakarta.validation.version>3.0.2</jakarta.validation.version>
        <jakarta.annotation.version>2.1.1</jakarta.annotation.version>
        <jakarta.servlet.version>6.0.0</jakarta.servlet.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2023.0.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.xavelo.filocitas</groupId>
                <artifactId>filocitas-api-spec</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
